# webcam

./: .gitignore  Cargo.toml  Trunk.toml  glue.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: devices.rs  lib.rs  main.rs  video_stream.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: controls.rs  mod.rs  video.rs
