[package]
name = "webcam"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sycamore = { version = "0.9.0-beta.2", features = ["serde", "futures"] }
tracing = "0.1.40"
tracing-wasm = "0.2.1"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "VideoTrack",
  "HtmlVideoElement",
  "HtmlSelectElement",
  "Navigator",
  "MediaStream",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "MediaStreamConstraints",
  "Permissions",
  "MediaDevices",
]
